fixes +1 new CLI greek command for NLP
